# f1

./: .gitignore  Makefile  ReadMe.MD  docker-compose.yaml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1e4a375bf45_initial_schema.py  aeb65a337545_initial_schema.py  d9c4532e75b5_add_result_classification_tables.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  event.py  live.py  prediction.py  reference.py  standings.py  telemetry.py
backend/tests/: test_main.py
frontend/src/: App.tsx
